--- a/src/pages/footer.css
+++ b/src/pages/footer.css
@@ -30,3 +30,8 @@ width: 100%;}
     margin-bottom: auto;
 
 }
+
+.footer-mark{color: antiquewhite;
+font-size: 14px;
+font-weight: 600;
+margin-top: 20px;}
